Subwindows were rendered wrong on ie6, fixes #2382
svn changeset:6304/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2533,16 +2533,13 @@ input.i-modified,
 	height: 8px;
 	margin-left: 9px;
 	background: transparent url(window/img/bottom-right.png) no-repeat right top;
-	position: relative;
 }
 
 .i-window-resizebox {
 	position: absolute; /* Needed to position the element over ScrollPanel, which is also relatively positioned */
-	display: inline; /* fix IE6 double float margin bug */
 	right: 5px;
 	width: 10px;
 	height: 10px;
-	/*margin-right: 5px;*/
 	margin-top: -7px;
 	cursor: se-resize;
 	background: transparent url(window/img/resize.png);
