--- a/WebContent/ITMILL/themes/default/window/window.css
+++ b/WebContent/ITMILL/themes/default/window/window.css
@@ -59,16 +59,13 @@
 	height: 8px;
 	margin-left: 9px;
 	background: transparent url(img/bottom-right.png) no-repeat right top;
-	position: relative;
 }
 
 .i-window-resizebox {
 	position: absolute; /* Needed to position the element over ScrollPanel, which is also relatively positioned */
-	display: inline; /* fix IE6 double float margin bug */
 	right: 5px;
 	width: 10px;
 	height: 10px;
-	/*margin-right: 5px;*/
 	margin-top: -7px;
 	cursor: se-resize;
 	background: transparent url(img/resize.png);
